--- a/style.css
+++ b/style.css
@@ -6,18 +6,32 @@ body {
 }
 .card {
   padding: 20px;
-  background: linear-gradient(145deg, rgb(232, 15, 33), #601ce8);
   display: flex;
-  justify-content: space-evenly;
+  justify-content: space-around;
   width: 500px;
   margin: 0 auto;
   text-align: center;
   color: aliceblue;
   border-bottom: 8px solid rgb(58, 232, 218);
   border-radius: 16px;
+  background: linear-gradient(120deg, #e71118, #6118df, #ef3abc);
+  animation: bgCycle 6s ease-in-out infinite;
+  background-size: 200% 200%;
+}
+@keyframes bgCycle {
+  0% {
+    background-position: 0% 50%;
+  }
+  50% {
+    background-position: 100% 50%;
+  }
+  100% {
+    background-position: 0% 50%;
+  }
 }
 .img-avatar {
   width: 150px;
   border-radius: 16px;
   border: none;
 }
+
